# FractalEngine

./: CMakeLists.txt  imgui.ini  notes.txt
include/: AmountSliderComponent.hpp  App.hpp  Component.hpp  ControlComponent.hpp  FractalComponent.hpp
include/fractals/: CPUBarnsleyFern.hpp  CPUFractalComponent.hpp  Checkerboard.hpp  CheckerboardComponent.hpp  FractalComponent.hpp  GPUApollonianGasket.hpp  GPUCollatz.hpp  GPUFractalComponent.hpp  GPUJulia.hpp  GPULyapunov.hpp  GPUMandelbrot.hpp  GPUNewton.hpp  MandelbrotComponent.hpp
include/fractals/Checkerboard/: Checkerboard.hpp
include/fractals/Julia/: GPUJulia.hpp
include/fractals/Lyapunov/: GPULyapunov.hpp
include/fractals/Mandelbrot/: CPUMandelbrot.hpp  GPUMandelbrot.hpp  Mandelbrot.hpp
include/fractals/Newton/: GPUNewton.hpp
include/fractals/core/: CPUFractalComponent.hpp  FractalComponent.hpp
include/utils/: ShaderLoader.hpp
shaders/: Apollonian Gasket.glsl  Collatz.glsl  Julia.glsl  Lyapunov.glsl  Mandelbrot.glsl  Newton.glsl
src/: App.cpp  FractalComponent.cpp  main.cpp
src/fractals/: CPUBarnsleyFern.cpp  CPUFractalComponent.cpp  Checkerboard.cpp  FractalComponent.cpp  GPUApollonianGasket.cpp  GPUCollatz.cpp  GPUFractalComponent.cpp  GPUJulia.cpp  GPULyapunov.cpp  GPUMandelbrot.cpp  GPUNewton.cpp  Mandelbrot.cpp
src/fractals/Checkerboard/: Checkerboard.cpp
src/fractals/Julia/: GPUJulia.cpp
src/fractals/Lyapunov/: GPULyapunov.cpp
src/fractals/Mandelbrot/: CPUMandelbrot.cpp  GPUMandelbrot.cpp  Mandelbrot.cpp
src/fractals/Newton/: GPUNewton.cpp
src/fractals/core/: CPUFractalComponent.cpp  FractalComponent.cpp  GPUFractalComponent.cpp
src/utils/: ShaderLoader.cpp
